# WorldofEldara

./: .gitignore  .gitmodules  ASSET_PIPELINE_SUMMARY.md  BEFORE_AND_AFTER.md  BUILD_FIX_VERIFICATION.md  CMakeLists.txt  COMPLETION_SUMMARY.md  DEBUG_LOGGING_TEST_GUIDE.md  Eldara.uproject  FIXMAP_DESERIALIZATION_FIX_SUMMARY.md  HENKY3D_INTEGRATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_README.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  NETWORK_PACKET_PORT_SUMMARY.md  PACKET_DESERIALIZATION_FIX_NOTES.md  PACKET_DESERIALIZATION_IMPLEMENTATION.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  RESPONSE_DRIVEN_NETWORK_IMPLEMENTATION.md  SCENELOADER_FIX_SUMMARY.md  SECURITY.md  WORLD_LORE.md  build_game.bat  build_game.sh  unreal_project_check.py
Config/: DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
Content/: .gitkeep  BP_ForestSpawner.uasset
Content/Blueprints/: BP_ConnectTest.uasset  NewPawn1.uasset
Docs/: UnityImplementationGuide.md  UnrealImplementationGuide.md
Docs/Architecture/: NetworkProtocol.md  ServerArchitecture.md
Source/: Eldara.Target.cs  EldaraEditor.Target.cs
Source/Eldara/: Eldara.Build.cs  (+2 more)
_codeql_build_dir/: Makefile
assets/: README.md
docs/: architecture.md  encounter_tables.md  todo-next.md  world_map_design.md
game/: CMakeLists.txt  SceneLoader.cpp  SceneLoader.h  main.cpp
shaders/: Common.glsl  DepthPrepass.ps.glsl  DepthPrepass.vs.glsl  Forward.ps.glsl  Forward.vs.glsl  README.md  Shadow.ps.glsl  Shadow.vs.glsl
ui/: EldaraWorldMap.tsx  IMPLEMENTATION_NOTES.md  README.md  VISUAL_CHANGES.md  demo.html  index.html  package.json  standalone.html  tsconfig.json
(+102 files in other folders)
